# harmony

./: .gitignore  .travis.yml  README.md  Setup.hs  harmony.cabal  make_bnfc.sh  tests.sh
demo/: client.py  demo.py  prepare_demo.sh
examples/: key_value.hmy  name_clash.hmy  name_clash_enum_struct.hmy  people_store.hmy  tasks.hmy
examples/bad/: empty_struct.hmy  enum_value_clash.hmy  name_clash.hmy  name_clash_enum_struct.hmy  route_clash.hmy  struct_clash.hmy
examples/good/: SimpleTwitter.hmy  authentication.hmy  authentication_using_userlogin.hmy  authentication_using_userlogin_as_primary_key.hmy  booleans.hmy  enums.hmy  float_and_double.hmy  students.hmy  students_readOnly.hmy  tasks_inverse_deps.hmy
examples/in_progress/: bug_tracker.hmy  hidden.hmy  key_value_with_restrictions.hmy  lists.hmy  read_only.hmy  referring_structs.hmy
harmony-commandline/: Main.hs
harmony-randomSpecGenerator/: Main.hs
language-spec/: Language.cf
language_spec/: Language.cf
scripts/testing/: common.sh  end_to_end_auto_generated_tests.sh  end_to_end_tests.sh  set_test_env_for_example.sh  test_bad.sh  test_good.sh
src/: ApiSpec.hs  Harmony.hs  LangUtils.hs  OutputSelection.hs  ServiceGenerator.hs  StaticCheck.hs  TemplateCompiler.hs
src/Data/: DiGraph.hs
src/Generation/: OutputGenerator.hs  ServiceGenerator.hs  TemplateCompiler.hs
src/TypeCheck/: ApiSpec.hs  StaticCheck.hs  StructTrack.hs
templates/: node_js.tpl
templates/client/java/: pom.xml
templates/client/java/src/main/java/com/prototype/: NetworkClient.java  ServiceClient.tpl
templates/client/java/src/test/com/prototype/: ServiceClientTest.java  ServiceSpecification.scala
templates/client/python/: client.tpl  requirements.txt  test.tpl
templates/server/js/: package.tpl  server.tpl
test/: ApiSpecSpec.hs  HLint.hs  LangUtilsSpec.hs  TestUtils.hs
test/Data/: DiGraphSpec.hs
test/Generation/: ServiceGeneratorSpec.hs
test/TypeCheck/: ApiSpecSpec.hs
