name:                harmony

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.1.0

synopsis:            A web service specification compiler that generates implementation and tests.

description:         A parser of web service specification that is able to generate servers, clients and tests.

license:             GPL-3

license-file:        LICENSE

author:              Santiago Munín

maintainer:          santimunin@gmail.com

bug-reports:         https://github.com/SantiMunin/harmony/issues

category:            Development

build-type:          Custom

data-files:          templates/server/js/package.tpl
                   , templates/server/js/server.tpl
                   , templates/client/python/client.tpl
                   , templates/client/python/test.tpl
                   , templates/client/python/requirements.txt
                   , templates/client/java/pom.xml
                   , templates/client/java/src/main/java/com/prototype/NetworkClient.java
                   , templates/client/java/src/main/java/com/prototype/ServiceClient.tpl

extra-source-files:  README.md
                   , scripts/build/make_bnfc.sh
                   , scripts/testing/end_to_end_tests.sh
                   , scripts/testing/test_good.sh
                   , scripts/testing/test_bad.sh

cabal-version:       2.0

source-repository head
  type:     git
  location: https://github.com/SantiMunin/harmony

custom-setup
  setup-depends:       base  >= 4.5 && < 5
                    ,  Cabal >= 2.0
                    ,  process >= 1.4

library

  build-depends:       base >= 4.6 && < 5
                     , array
                     , containers
                     , BNFC
                     , hastache
                     , text
                     , mtl
                     , derive
                     , directory
                     , QuickCheck
                     , process
                     , hslogger
  
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  
  hs-source-dirs:      src, gen

  build-tools:         alex
                     , happy

  exposed-modules:     TypeCheck.ApiSpec
                     , TypeCheck.StaticCheck
                     , Generation.OutputGenerator
                     , Generation.ServiceGenerator
                     , Generation.TemplateCompiler
                     , Data.DiGraph
                     , Language.Abs
                     , Language.ErrM
                     , Language.Lex
                     , Language.Par
                     , LangUtils
                     , Paths_harmony
  autogen-modules:     Paths_harmony

  default-language:    Haskell2010
  
executable harmony

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  hs-source-dirs:      harmony-commandline

  main-is:             Main.hs

  build-depends:       base >= 4.6 && < 5
                     , harmony

  default-language:    Haskell2010

executable harmony-spec

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  hs-source-dirs:      harmony-randomSpecGenerator

  main-is:             Main.hs

  build-depends:       base >= 4.6 && < 5
                     , harmony
                     , QuickCheck

  default-language:    Haskell2010

test-suite hspec

  type:                exitcode-stdio-1.0

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -fno-warn-orphans

  hs-source-dirs:      test

  main-is:             Spec.hs

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hspec >= 2.0
                     , QuickCheck
                     , HUnit
                     , harmony
                     , derive
                     , hslogger

  default-language:    Haskell2010

test-suite hlint
  build-depends:       base >= 4.6 && < 5
                     , hlint

  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  hs-source-dirs:      test
  
  main-is:             HLint.hs

  type:                exitcode-stdio-1.0
  
  default-language:    Haskell2010

